Add comprehensive tests for effect handling, network policies, and terminal input
- Introduced tests for stalled executing effects, ensuring they recover through idempotent retries.
- Added tests for querying outcomes of stalled effects without re-executing them.
- Implemented tests for manual effects left as unknown for manual resolution.
- Created tests to verify wake conflicts do not roll back completed effect results.
- Enhanced LogicalExportService tests to handle special characters in file names and reject nullable row JSON column definitions.
- Updated PostgresLogicalExportIT to normalize database paths.
- Expanded JavaExtensionCatalogTest to reject namespaces and bare names already in the registry, and to handle FCL null arguments.
- Added extensive tests in FclBuiltinsExhaustiveTest for JSON serialization and path normalization.
- Implemented tests in FclCodecAndRegistryTest for round-tripping characters and big integers.
- Enhanced MarketRuntimeFunctionsTest to verify upgrade behavior and reject out-of-range market origin ports.
- Added PackageBuilderTest to reject dot components in namespace and name.
- Updated SqlStateClassifierTest to classify SQL timeout exceptions and protocol violations correctly.
- Enhanced SchedulerServiceTest to report JVM errors as fatal and reject invalid construction parameters.
- Added tests in EditableTerminalInputTest for handling control characters and overlong UTF-8 sequences.
- Updated TerminalConsoleTest to ensure proper command history behavior and error reporting.
- Introduced NetworkTargetPolicyTest to validate public address requirements and host header formatting.